Config.ini change added

--- a/apache-config.conf
+++ b/apache-config.conf
@@ -8,7 +8,7 @@
       AllowOverride All
       Order deny,allow
       RewriteEngine on	
-      RewriteRule / - [E=DOLPHIN_TOOLS_PATH:${DOLPHIN_TOOLS_PATH}]
+      RewriteRule / - [E=DOLPHIN_PARAMS_SECTION:${DOLPHIN_PARAMS_SECTION}]
       Allow from all
   </Directory>
  
